--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-.vscode/
+.vscode/.DS_Store
+.collabignore
